# IRACwithRAG

./: .gitignore  Procfile  README.md  package-lock.json  package.json
backend/: Dockerfile  README.md  pyproject.toml
backend/resources/: similar_words.csv
backend/src/: main.py  system_prompt.txt
backend/src/experiments/: experiments.ipynb  settings.py  text_utils.py
backend/src/plugins/: vectorRAGPlugin.py
backend/src/utils/: settings.py
chatbot/: package-lock.json  package.json
chatbot/src/: App.tsx
chatbot/src/components/: Chatbot.css  Chatbot.tsx
frontend/: Dockerfile  README.md  default.conf  package-lock.json  package.json  tsconfig.json
frontend/public/: index.html
frontend/src/: index.tsx  style.css
frontend/src/api/: agent.ts  api-pane.tsx
frontend/src/components/: axes.tsx  points.tsx  vectorview.tsx
frontend/src/models/: types.tsx
frontend/src/utils/: vectordb.ts
public/: index.html
src/: App.css  App.tsx
src/components/: Chatbot.css  Chatbot.tsx  api-agent.ts  api-models.ts
